docs/2023.1/studio/references/characters/stand-ins.md
# Stand-ins

Stand-ins let you freeze characters in their current pose. Stand-ins can help with several aspects of a production workflow, including:

* **Capturing reference or promotional photos.** Pose your characters, then take all the shots you want from any angle.
* **Setting up camera angles.** Having the characters frozen in their starting positions makes it easy to setup your cameras after the fact so they're ready to go when the day of the shoot comes.
* **Giving actors their marks and getting into character.** The teleporter will lock onto the stand-ins, which also act as actor marks, letting actors jump right into the proper position for the shot. It'll even automatically change them to the right character if they're not already in it.

### Using stand-ins

To create stand-ins, go to the **Characters** menu and click **Pose** along the bottom of the menu.

**----- INSERT SCREENSHOT OF CHARACTER MENU -----**

A 3-second timer will count down, giving the actors time to strike a pose. A clone of each character will appear frozen in place at the end of the countdown. Teleport away to see your stand-ins.

> Note: A stand-in will be created for each user present who is in character at the time. Invisible users will not appear as stand-ins.

To erase all of the stand-ins, press the **Clear** button that appears under **Pose** when stand-ins are present. Flipside Studio will ask you to confirm that you want to erase them before doing so.

**----- INSERT SCREENSHOT OF CLEAR CONFIRMATION DIALOG -----**

You can also go into the Props menu and move or remove individual stand-ins just like ordinary props.

To jump into position on set, point your teleporter at a stand-in and press the trigger. You will become that character if you're not already, and the stand-in will disappear so you can record your scene.

---

Next: [[Studio / References / Creator profile ]]
